--- a/src/bitcoind-res.rc
+++ b/src/bitcoind-res.rc
@@ -17,13 +17,13 @@ BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
             VALUE "CompanyName",        "Litecoin"
-            VALUE "FileDescription",    "litecoind (Litecoin node with a JSON-RPC server)"
+            VALUE "FileDescription",    "jinxiangcoind (Litecoin node with a JSON-RPC server)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "litecoind"
+            VALUE "InternalName",       "jinxiangcoind"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "litecoind.exe"
-            VALUE "ProductName",        "litecoind"
+            VALUE "OriginalFilename",   "jinxiangcoind.exe"
+            VALUE "ProductName",        "jinxiangcoind"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
